--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-
 server.port=9999
 
 
-#### \u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u5C5E\u6027
+#### 数据库连接池属性
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db_questionnaire?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
-#\u81EA\u52A8\u63D0\u4EA4
+#自动提交
 spring.datasource.default-auto-commit=true
-#\u6307\u5B9Aupdates\u662F\u5426\u81EA\u52A8\u63D0\u4EA4
+#指定updates是否自动提交
 spring.datasource.auto-commit=true
 spring.datasource.maximum-pool-size=100
 spring.datasource.max-idle=10
@@ -19,15 +18,15 @@ spring.datasource.initial-size=5
 spring.datasource.validation-query=SELECT 1
 spring.datasource.test-on-borrow=false
 spring.datasource.test-while-idle=true
-# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.time-between-eviction-runs-millis=18800
-# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+# 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.minEvictableIdleTimeMillis=300000
-# \u6253\u5370\u65E5\u5FD7
+# 打印日志
 logging.level.com.questionnaire=debug
 
 
-# mybatis\u5BF9\u5E94\u7684\u6620\u5C04\u6587\u4EF6\u8DEF\u5F84
+# mybatis对应的映射文件路径
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 # thymeleaf
