--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>1.2.56</version>
         </dependency>
 
+        <!--mybatis分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 
 
     </dependencies>
