--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,12 @@ spring.thymeleaf.mode=LEGACYHTML5
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.content-type=text/html # ;charset=<encoding> is added
 spring.thymeleaf.cache=false
+
+
+# redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.jedis.pool.min-idle=1
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-active=1000
