--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=80
 
 #### \u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u5C5E\u6027
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_questionnaire?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=denglu
+spring.datasource.url=jdbc:mysql://114.115.206.170:3306/db_questionnaire?useSSL=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=yxd
+spring.datasource.password=dagexiang99
 #\u81EA\u52A8\u63D0\u4EA4
 spring.datasource.default-auto-commit=true
 #\u6307\u5B9Aupdates\u662F\u5426\u81EA\u52A8\u63D0\u4EA4
@@ -39,9 +39,9 @@ spring.thymeleaf.cache=false
 
 
 # redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.jedis.pool.min-idle=1
-spring.redis.jedis.pool.max-idle=10
-spring.redis.jedis.pool.max-wait=-1
-spring.redis.jedis.pool.max-active=1000
+#spring.redis.host=114.115.206.170
+#spring.redis.port=6379
+#spring.redis.jedis.pool.min-idle=1
+#spring.redis.jedis.pool.max-idle=10
+#spring.redis.jedis.pool.max-wait=-1
+#spring.redis.jedis.pool.max-active=1000
